Commit inicial com a migração para java 21 e spring boot 3.4.3